--- a/portifólio matemática/funcaoquad.html
+++ b/portifólio matemática/funcaoquad.html
@@ -14,5 +14,48 @@
 <p>A função quadrática, também chamada de função do segundo grau,</p>
 <p>  é expressa como f(x) = ax² + bx + c ou y = ax² + bx + c, sendo que </p>
 <p>  os coeficientes "a, b e c" números reais e "a" diferente de 0 (zero) </p>
+
+<h2>  Gráfico da função quadrática </h2>
+
+<p> Pontos importantes para se achar: </p>
+<p> x¹ e x² </p>
+<p> vértice </p>
+<p> ponto c </p>
+<p> Tendo esses 4 pontos, tudo irá se ligar no formato de uma parábola.</p>
+<p> Para encontrar o ponto c, é só analisarmos a função, então na seguinte função </p>
+
+<p> y= -x² + 6x -5 </p>
+
+<p> O ponto c é <b> -5 </b> </p>
+
+<p> Para achar x¹ e x² se usa Bháskara: </p>
+<img src="image/bhaskra.png" />
+
+<p> Então ficamos com: </p>
+
+<p> x¹ = 1</p>
+<p> x² = +5</p>
+
+<p> Para o vértice: Precisamos achar o X e o Y do vértice </p>
+
+<p> X do vértice é igual à:
+
+<<p>p> <b> X= -b / 2 * a </b>
+
+<<p> p> Então X do vértice é igual à<b> 3 </b>
+
+<<p> p> Y do vértice é igual <p> à:
+
+<p> <b> Y= -&delta;/4*a </b> </p>
+
+<p> Então Y do vértice é igual à <b> 4 </b>
+
+<p> Logo: </p>
+
+<p> X=3</p>
+<p> Y=4</p>
+
+<p> E o gráfico fica assim:
+<img src="image/graficoquad.png.png" />
 </body>
 </html>
