--- a/funcaoquad.html
+++ b/funcaoquad.html
@@ -29,7 +29,7 @@
 <p> O ponto c é <b> -5 </b> </p>
 
 <p> Para achar x¹ e x² se usa Bháskara: </p>
-<img src="image/bhaskra.png" />
+<img src="image/bhaskara.png" />
 
 <p> Então ficamos com: </p>
 
@@ -56,6 +56,6 @@
 <p> Y=4</p>
 
 <p> E o gráfico fica assim:
-<img src="image/graficoquad.png.png" />
+<img src="image/graficoquad.png" />
 </body>
 </html>
