--- a/funcaoquad.html
+++ b/funcaoquad.html
@@ -29,7 +29,7 @@
 <p> O ponto c é <b> -5 </b> </p>
 
 <p> Para achar x¹ e x² se usa Bháskara: </p>
-<img src="image/bhaskara.png" />
+<img src="image/bhaskara.png" height="500" width="800" />
 
 <p> Então ficamos com: </p>
 
@@ -55,7 +55,8 @@
 <p> X=3</p>
 <p> Y=4</p>
 
-<p> E o gráfico fica assim:
-<img src="image/graficoquad.png" />
+<p> E o gráfico fica assim:</p>
+
+<img src="image/graficoquad.png" height="800" width="900" />
 </body>
 </html>
