--- a/funcaoquad.html
+++ b/funcaoquad.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-<img src="image/abacus.png" />
+<img src="image/abacus.png" width="100" height="100" />
 <h1>Função Quadrática</h1>
 
 <p>A função quadrática, também chamada de função do segundo grau,</p>
@@ -29,7 +29,7 @@
 <p> O ponto c é <b> -5 </b> </p>
 
 <p> Para achar x¹ e x² se usa Bháskara: </p>
-<img src="image/bhaskara.png" height="500" width="800" />
+<img src="image/bhaskara.png" height="300" width="500" />
 
 <p> Então ficamos com: </p>
 
@@ -57,6 +57,6 @@
 
 <p> E o gráfico fica assim:</p>
 
-<img src="image/graficoquad.png" height="800" width="900" />
+<img src="image/graficoquad.png" height="500" width="600" />
 </body>
 </html>
