--- a/funcaoquad.html
+++ b/funcaoquad.html
@@ -29,8 +29,9 @@
 <p> O ponto c é <b> -5 </b> </p>
 
 <p> Para achar x¹ e x² se usa Bháskara: </p>
-<img src="image/bhaskara.png" height="300" width="600" />
-
+<center>
+<img src="image/bhaskara.png" height="171" width="455" />
+</center>
 <p> Então ficamos com: </p>
 
 <p> x¹ = 1</p>
@@ -56,7 +57,8 @@
 <p> Y=4</p>
 
 <p> E o gráfico fica assim:</p>
-
-<img src="image/graficoquad.png" height="600" width="700" />
+<center>
+<img src="image/graficoquad.png" height="1754" width="1240" />
+</center>
 </body>
 </html>
