--- a/funcaoquad.html
+++ b/funcaoquad.html
@@ -39,17 +39,17 @@
 
 <p> Para o vértice: Precisamos achar o X e o Y do vértice </p>
 
-<p> X do vértice é igual à:
+<p> X do vértice é igual à:</p>
 
-<<p>p> <b> X= -b / 2 * a </b>
+<p> <b> X= -b / 2 * a </b> </p>
 
-<<p> p> Então X do vértice é igual à<b> 3 </b>
+<p> Então X do vértice é igual à<b> 3 </b> </p>
 
-<<p> p> Y do vértice é igual <p> à:
+<p> Y do vértice é igual à:  </p>
 
 <p> <b> Y= -&delta;/4*a </b> </p>
 
-<p> Então Y do vértice é igual à <b> 4 </b>
+<p> Então Y do vértice é igual à <b> 4 </b> </p>
 
 <p> Logo: </p>
 
