--- a/funcaoquad.html
+++ b/funcaoquad.html
@@ -60,5 +60,6 @@
 <center>
 <img src="image/graficoquad.png" height="1754" width="1240" />
 </center>
+<a href="conteudo.html"> clique aqui para voltar </a> 
 </body>
 </html>
