--- a/funcaomod.html
+++ b/funcaomod.html
@@ -21,7 +21,7 @@
   <p> Então vamos primeiro vamos analisar o gráfico da função acima sem a </p>
   <p>utilização do módulo na sua lei de formação, ou seja, vamos fazer o gráfico de </p>
   <p> <b> f(x) = – x </b> </p>
- <img src="image/funcaomod.png" width="640" height="740" />
+ <img src="image/funcaomod2.png" width="640" height="740" />
 
  <p>O módulo presente na lei da função faz com que a parte do gráfico que se </p>
  <p> localiza abaixo do eixo x “reflexione” no momento em que toca o eixo x. </p>
@@ -29,4 +29,9 @@
 <p> valores negativos de y e, como o módulo de um número é sempre um valor</p>
 <p> positivo, o gráfico de f(x) = |– x| fica: </p>
 
-<img src="image/funcaomod2.png" width="640" height="740" />
+<img src="image/funcaomod.png" width="640" height="740" />
+
+<a href="conteudo.html"> clique aqui para voltar </a>
+
+</body>
+</html
