--- a/funcaomod.html
+++ b/funcaomod.html
@@ -32,6 +32,7 @@
 <img src="image/funcaomod.png" width="640" height="740" />
 
 <a href="conteudo.html"> clique aqui para voltar </a>
-
+<h4> Outros exemplos: </h4> 
+<iframe src="https://www.geogebra.org/classic/tspa23cn?embed" width="800" height="600" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
 </body>
 </html
