--- a/funcaomod.html
+++ b/funcaomod.html
@@ -35,7 +35,6 @@
 <h2> Outros exemplos: </h2>
 <center>
 <iframe src="https://www.geogebra.org/classic/tspa23cn?embed" width="800" height="600" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
-<iframe src="https://www.geogebra.org/classic/tspa23cn?embed" width="800" height="600" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
-
+<iframe src="https://www.geogebra.org/classic/vwyntdvd?embed" width="800" height="600" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
 </body>
 </html
