--- a/funcaomod.html
+++ b/funcaomod.html
@@ -31,10 +31,12 @@
 
 <img src="image/funcaomod.png" width="640" height="740" />
 
-<a href="conteudo.html"> clique aqui para voltar </a>
+
 <h2> Outros exemplos: </h2>
 <center>
 <iframe src="https://www.geogebra.org/classic/tspa23cn?embed" width="800" height="600" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
 <iframe src="https://www.geogebra.org/classic/vwyntdvd?embed" width="800" height="600" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
+</center>
+<a href="conteudo.html"> clique aqui para voltar </a>
 </body>
 </html
