--- a/portifólio matemática/funcaoquad.html
+++ b/portifólio matemática/funcaoquad.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-<img src="image/abacus.png" />
+<img src="image/abacus.png" width="100" height="100" />
 <h1>Função Quadrática</h1>
 
 <p>A função quadrática, também chamada de função do segundo grau,</p>
@@ -29,8 +29,9 @@
 <p> O ponto c é <b> -5 </b> </p>
 
 <p> Para achar x¹ e x² se usa Bháskara: </p>
-<img src="image/bhaskara.png" />
-
+<center>
+<img src="image/bhaskara.png" height="171" width="455" />
+</center>
 <p> Então ficamos com: </p>
 
 <p> x¹ = 1</p>
@@ -38,24 +39,27 @@
 
 <p> Para o vértice: Precisamos achar o X e o Y do vértice </p>
 
-<p> X do vértice é igual à:
+<p> X do vértice é igual à:</p>
 
-<<p>p> <b> X= -b / 2 * a </b>
+<p> <b> X= -b / 2 * a </b> </p>
 
-<<p> p> Então X do vértice é igual à<b> 3 </b>
+<p> Então X do vértice é igual à<b> 3 </b> </p>
 
-<<p> p> Y do vértice é igual <p> à:
+<p> Y do vértice é igual à:  </p>
 
-<p> <b> Y= -&delta;/4*a </b> </p>
+<p> <b> Y= -Δ/4*a </b> </p>
 
-<p> Então Y do vértice é igual à <b> 4 </b>
+<p> Então Y do vértice é igual à <b> 4 </b> </p>
 
 <p> Logo: </p>
 
 <p> X=3</p>
 <p> Y=4</p>
 
-<p> E o gráfico fica assim:
-<img src="image/graficoquad.png" />
+<p> E o gráfico fica assim:</p>
+<center>
+<img src="image/graficoquad.png" height="1754" width="1240" />
+</center>
+<a href="conteudo.html"> clique aqui para voltar </a> 
 </body>
 </html>
