--- a/portifólio matemática/conteudo.html
+++ b/portifólio matemática/conteudo.html
@@ -21,10 +21,11 @@ de Técnico em Informática Integrado Campus Erechim
 </p>
 &nbsp;
 	<h4> <a href="funcaoquad.html">  Funções Quadráticas </a></h4>
-	<h4><a href="x">  Funções Modulares</a></h4>
-	<h4><a href="x">  Funções exponenciais e logaritmicas </a></h4>
-	<h4><a href="x"> Matemática financeira </a></h4>
+	<h4><a href="funcaomod.html">  Funções Modulares</a></h4>
+	<h4><a href="x"> PA e PG </a></h4>
 	<h4> <a href="x"> Estatisticas</a></h4>
 	<h5> <a href="index.html"> Clique aqui para voltar a página inicial</a></h5>
+
+
 </body>
 </html>
