--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <nav id="menu">
     <ul>
-	    <li><a href="home.html">Home</a></li>
+	    <li><a href="home.html">Conclusões e autoavaliação</a></li>
 	    &nbsp;
 	    <li><a href="conteudo.html"> Conteúdos </a></li>
 	     &nbsp;
