--- a/portifólio matemática/conteudo.html
+++ b/portifólio matemática/conteudo.html
@@ -22,8 +22,8 @@ de Técnico em Informática Integrado Campus Erechim
 &nbsp;
 	<h4> <a href="funcaoquad.html">  Funções Quadráticas </a></h4>
 	<h4><a href="funcaomod.html">  Funções Modulares</a></h4>
-	<h4><a href="x"> PA e PG </a></h4>
-	<h4> <a href="x"> Estatisticas</a></h4>
+	<h4><a href="papg.html"> PA e PG </a></h4>
+	<h4> <a href="estatistica.html"> Matemática Financeira </a></h4>
 	<h5> <a href="index.html"> Clique aqui para voltar a página inicial</a></h5>
 
 
