--- a/home.html
+++ b/home.html
@@ -1,6 +1,49 @@
 <html>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<link type='text/css' rel='stylesheet' href="css/geral.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,700&display=swap" rel="stylesheet">
+</head>
 <body>
-	<h1>nada aqui AINDA </h1>
-<h5> <a href="index.html"> Clique aqui para voltar a página inicial</a></h5>
+	<img src="image/030-teacher.png" width="100" height="100" />
+	<h3> Função Quadrática e Modular </h3>
+<p> Escolhi as duas primeiras funções porque sempre gostei de trabalhar com gráficos e coisas do gênero. </p>
+<p> Sou uma pessoa que gosta muito de desenhar, então gráficos são um dos poucos conteúdos de matemática que eu entendo.</p>
+<p> Gostei muito de como ambos os conteúdos foram apresentados para a gente, foi muito interessante desenvolver as atividades de ambos os conteúdos.</p>
+<p> Tive dificuldades para entender no início, mas desenvolvendo o portfólio consegui sanar algumas dúvidas minhas, e os materiais disponibilizados no moodle me ajudaram bastante.</p>
+<p> Adorei a plataforma do Geogebra e como ela funciona, até usei a mesma no desenvolvimento deste site/portfólio. </p>
+
+<h3> PA e PG </h3>
+<p> Escolhi a PA e a Pg por terem sido conteúdos abordados anteriormente nas disciplinas de programação, então já possuía certa intimidade com eles e os achava muito interessantes, </p>
+<p> já tinha visto algumas dessas sequências no ensino fundamental. Achei o conteúdo disponibilizado muito bom e conseguiu sanar minhas dúvidas.</p>
+<p> Já tinha visto alguns conteúdos sobre a sequência de Fibonacci e o uso dela no design, e a presença dela na natureza também,</p>
+<p> um fenômeno muito interessante. </p>
+
+
+<h3> Matemática Financeira </h3>
+<p> Escolhi colocar matemática financeira por influência de minha avó, que gostava de ver sobre isso no período da escola,</p>
+<p> então recebi ajuda dela no momento de escolher as fontes para usar no meu portfolio.</p>
+<p> Também gostei muito de trabalhar com esse conteúdo porque forças externas misteriosas (minha avó) me ajudaram a entender um pouco mais </p>
+<p> sobre cada parte da matemática financeira, trazendo informações externas para dentro do meu trabalho.</p>
+<p> Foi bem interessante trabalhar com essa ciência matemática e como ela é aplicada no nosso dia a dia </p>
+
+
+<h3> Auto Avaliação </h3>
+<p>Acho que ainda mantive os mesmos problemas do primeiro ciclo, não sinto que tive</p>
+<p>uma evolução de fato. Me senti desmotivada por uma série de motivos pessoais, e isso</p>
+<p>acabou influenciando para meu péssimo aproveitamento durante o 2º ciclo das APNP’s.</p>
+<p>Mesmo gostando dos conteúdos, não consegui ter o aproveitamento que eu desejava</p>
+<p>ter e não foi satisfatório para mim não ter o atingido. Minha maior dificuldade continua</p>
+<p>sendo os horários e administrar eles, sempre muito difícil conseguir fazer os temas de</p>
+<p>dia, então sempre acabo fazendo eles tarde da noite, o que acaba por me levar a não</p>
+<p>conseguir fazer eles de forma correta e bem aproveitada.</p>
+<p>Todo o conteúdo disponibilizado foi de muita qualidade, e os atendimentos da professora também ajudaram muito,</p>
+<p>mas a readaptação para uma realidade de aulas 100% EaD ainda me deixa um pouco desnorteada e perdida, o que acaba por </p>
+<p>influenciar no meu desempenho como estudante</p>
+
+<a href="conteudo.html"> clique aqui para voltar </a>
 </body>
-</html>
+</html
