--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </center>
 <div id="explicacao">
 <p>
-Essa pagina foi criada para fins educacionais, para o desenvolvimento de um projeto escolar, nenhum conteúdo que estará sendo postado aqui é de minha autoria.
+Essa pagina foi criada para fins educacionais, para o desenvolvimento de um projeto escolar.
 </p>
 </div>
 <div id="canto">
