--- a/Links.html
+++ b/Links.html
@@ -1,6 +1,22 @@
 <html>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<link type='text/css' rel='stylesheet' href="css/geral.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,700&display=swap" rel="stylesheet">
+</head>
 <body>
-	<h1>nada aqui AINDA </h1>
-	<h5> <a href="index.html"> Clique aqui para voltar a página inicial</a></h5>
+<h2> Escolhi os materiais que mais me ajudaram, além dos conteúdos que a Profª Valeria Lessa disponibilizou </h2>
+<p> Função Quadrática: </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mzEGFoEenh8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p> Função Modular: </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sXFdCZXzRT8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p> PA e PG: </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TC2HcZV3mGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<a href="https://www.todamateria.com.br/matematica-financeira-conceitos-formulas/#:~:text=O%20cálculo%20de%20juros%20pode,nas%20transações%20comerciais%20e%20financeiras."> Matemática financeira </a>
+<p> Sinto que devemos procurar meteriais além dos disponiblizados a nós, assim conseguiremos aprofundar ainda mais nosso conhecimento sobre o assunto, o que sempre facilita muito na hora de desenvolver as atividades </p>
+<a href="index.html"> Clique aqui para voltar a página inicial</a>
 </body>
 </html>
