--- a/contato.html
+++ b/contato.html
@@ -1,6 +1,18 @@
 <html>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<link type='text/css' rel='stylesheet' href="css/geral.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,700&display=swap" rel="stylesheet">
 <body>
-	<h1>nada aqui AINDA </h1>
-	<h5> <a href="index.html"> Clique aqui para voltar a página inicial</a></h5>
+	<h1> Contatos da desenvolvedora do Conta Mais: </h1>
+	<h4> Email:  </h4>
+	 <p> lazlaz@gmail.com </p>
+	<h4> GitHub: </h4>
+		<p> LauraZal05 </p>
+	<h4> Contatar apenas se notar algum bug ou erro no site, agradeço! </h4> 
+<a href="index.html"> Clique aqui para voltar a página inicial</a>
 </body>
 </html>
